Fix regression: empty tooltip appears in Linux and Chrome OS

After landing the tooltip fix as in crrev.com/2652833002, UI regression
was captured in Linux and Chrome OS where empty tooltip shows up. It
seems Windows has not have this issue.

This CL fixes this regression.

BUG=685078, 685408

Review-Url: https://codereview.chromium.org/2652353003
Cr-Commit-Position: refs/heads/master@{#446486}

Former-commit-id: 6335c597c43363e29d6757d60aa34a895aa5398a